[Neovim] Add git plugins, add glow plugin.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -148,6 +148,9 @@ require('user_toggleterm')
 
 -- Neorg Settings
 require('user_neorg')
+vim.g.glow_binary_path = "{{ nix_bin }}"
+vim.g.glow_border = "rounded"
+vim.g.glow_use_pager = true
 
 -- Neoformat Settings
 -- require('user_neoformat')
