[Neovim] Add extra lua settings.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -163,4 +163,7 @@ require('user_languages')
 
 -- Last Minute Config
 
+-- Extra Config
+{{ extra_nvim_lua_settings or "-- No Extra Neovim Lua Settings" }}
+
 -- vim: ts=2 sts=2 sw=2 et
