[Neovim] New plugins.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -161,6 +161,12 @@ require('user_keymaps')
 -- User Language Plugin Settings
 require('user_languages')
 
+-- Marks Plugin
+require("marks").setup{}
+
+-- Leap Plugin Settings
+require('leap').set_default_keymaps()
+
 -- Last Minute Config
 
 -- Extra Config
