[Neovim] Add registers plugin.

--- a/templates/nvim/lua/plugins.lua.j2
+++ b/templates/nvim/lua/plugins.lua.j2
@@ -93,6 +93,8 @@ return require('packer').startup(function(use)
   }
   -- Marks Management
   use 'chentoast/marks.nvim'
+  -- Register Management
+  use "tversteeg/registers.nvim"
   -- Project Management
   use 'windwp/nvim-projectconfig'
   use 'nvim-telescope/telescope-project.nvim'
