[Neovim] Cleanup indent settings.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -26,13 +26,9 @@ vim.wo.cursorline = true
 -- Set highlight on search
 vim.o.hlsearch = true
 
--- Tab/Space Settings
+-- Tab/Space/Indent Settings
+vim.o.breakindent = true
 vim.o.autoindent = true
-vim.o.expandtab = true
-vim.o.shiftwidth = 4
-vim.o.smartindent = true
-vim.o.softtabstop = 4
-vim.o.tabstop = 4
 
 -- Set Scrollbar
 require("scrollbar").setup()
@@ -45,9 +41,6 @@ vim.wo.wrap = false
 
 -- Enable mouse mode
 vim.o.mouse = 'a'
-
--- Enable break indent
-vim.o.breakindent = true
 
 -- Save undo history
 vim.opt.undofile = true
