[Neovim] Fix file substitution.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -163,6 +163,6 @@ require('leap').set_default_keymaps()
 -- Last Minute Config
 
 -- Extra Config
-{{ extra_nvim_lua_settings or "-- No Extra Neovim Lua Settings" }}
+{{ extra_nvim_lua_settings_file or "-- No Extra Neovim Lua Settings" }}
 
 -- vim: ts=2 sts=2 sw=2 et
