[Neovim] Cleanup lsp keymap.

--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -100,8 +100,6 @@ nnoremap("<leader>nl", "<cmd>Telescope neorg insert_file_link<CR>", "silent", { 
 -- Diagnostic Mappings
 -- m.nname("<leader>e", "Diagnostic")
 -- nnoremap("<leader>ee", "<cmd>lua vim.diagnostic.open_float()<CR>", "silent", "Diagnostic: Open Float")
--- nnoremap("[d", "<cmd>lua vim.diagnostic.goto_prev()<CR>", "silent", "Diagnostic: Goto Previous")
--- nnoremap("]d", "<cmd>lua vim.diagnostic.goto_next()<CR>", "silent", "Diagnostic: Goto Next")
 -- nnoremap("<leader>el", "<cmd>lua vim.diagnostic.setloclist()<CR>", "silent", "Diagnostic: Set Location List")
 
 -- LSP Mappings
@@ -110,12 +108,12 @@ nnoremap("<leader>li", ":LspInfo<Cr>",    "LSP: Show LSP information")
 nnoremap("<leader>lr", ":LspRestart<Cr>", "LSP: Restart LSP")
 nnoremap("<leader>ls", ":LspStart<Cr>",   "LSP: Start LSP")
 nnoremap("<leader>lS", ":LspStop<Cr>",    "LSP: Stop LSP")
-nnoremap("gD", ":Definitions<Cr>", "silent", "LSP: Goto Definition")
-nnoremap("gd", ":Declarations<CR>", "silent", "LSP: Goto Declaration")
+nnoremap("gd", ":Definitions<Cr>", "silent", "LSP: Goto Definition")
+nnoremap("gD", ":Declarations<CR>", "silent", "LSP: Goto Declaration")
 nnoremap("gi", ":Implementations<CR>", "silent", "LSP: Goto Implementation")
-nnoremap("gT", ":TypeDefinitions<CR>", "silent", "LSP: Goto Type Definitions")
+nnoremap("<leader>D", ":TypeDefinitions<CR>", "silent", "LSP: Goto Type Definitions")
 nnoremap("gr", ":References<CR>", "silent", "LSP: Find References")
-nnoremap("gs", ":DocumentSymbols<CR>", "silent", "LSP: Find Document Symbols")
+nnoremap("g/", ":DocumentSymbols<CR>", "silent", "LSP: Find Document Symbols")
 nnoremap("gS", ":WorkspaceSymbols<CR>", "silent", "LSP: Find Workspace Symbols")
 nnoremap("gL", ":Diagnostics<CR>", "silent", "LSP: Show Buffer Diagnostics")
 nnoremap("gG", ":DiagnosticsAll<CR>", "silent", "LSP: Show All Diagnostics")
@@ -123,12 +121,15 @@ nnoremap("<leader>gi", ":IncomingCalls<CR>", "silent", "LSP: Show Incoming Calls
 nnoremap("<leader>go", ":OutgoingCalls<CR>", "silent", "LSP: Show Outgoing Calls")
 nnoremap("<leader>ca", ":CodeActions<CR>", "silent", "LSP: Code Actions")
 nnoremap("<leader>cA", ":RangeCodeActions<CR>", "silent", "LSP: Range Code Actions")
--- nnoremap("gD", "<cmd>lua vim.lsp.buf.declaration()<Cr>", "silent", "LSP: Goto Declaration")
 -- nnoremap("gd", "<cmd>lua vim.lsp.buf.definition()<CR>", "silent", "LSP: Goto Definition")
+-- nnoremap("gD", "<cmd>lua vim.lsp.buf.declaration()<Cr>", "silent", "LSP: Goto Declaration")
 -- nnoremap("gi", "<cmd>lua vim.lsp.buf.implementation()<CR>", "silent", "LSP: Goto Implementation")
 -- nnoremap("<leader>D", "<cmd>lua vim.lsp.buf.type_definition()<CR>", "silent", "LSP: Type Definition")
 -- nnoremap("gr", "<cmd>lua vim.lsp.buf.references()<CR>", "silent", "LSP: Find References")
 -- nnoremap("g/", "<cmd>lua require('telescope.builtin').lsp_document_symbols()<CR>", "silent", "LSP: Search Document Symbols")
+-- nnoremap("gS", "<cmd>lua require('telescope.builtin').lsp_dynamic_workspace_symbols()<CR>", "silent", "LSP: Search Workspace Symbols")
+-- nnoremap("[d", "<cmd>lua vim.diagnostic.goto_prev()<CR>", "silent", "Diagnostic: Goto Previous")
+-- nnoremap("]d", "<cmd>lua vim.diagnostic.goto_next()<CR>", "silent", "Diagnostic: Goto Next")
 -- nnoremap("K", "<cmd>lua vim.lsp.buf.hover()<CR>", "silent", "LSP: Hover")
 -- nnoremap("<leader>K", "<cmd>lua vim.lsp.buf.signature_help()<CR>", "silent", "LSP: Signature Help")
 -- nnoremap("<leader>wa", "<cmd>lua vim.lsp.buf.add_workspace_folder()<CR>", "silent", "LSP: Add Workspace Folder")
