--- a/templates/nvim/lua/plugins.lua.j2
+++ b/templates/nvim/lua/plugins.lua.j2
@@ -37,7 +37,8 @@ return require('packer').startup(function(use)
   end}
   -- Treesitter Plugins
   use { 'nvim-treesitter/nvim-treesitter', run = ':TSUpdate' }
-  use 'nvim-treesitter/nvim-treesitter-textobjects'
+  use { 'nvim-treesitter/nvim-treesitter-textobjects', requires = { 'nvim-treesitter/nvim-treesitter' } }
+  use { 'p00f/nvim-ts-rainbow', requires = { 'nvim-treesitter/nvim-treesitter' } }
   -- Buffer Switching
   use({
     "ghillb/cybu.nvim",
