--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -153,6 +153,6 @@ vim.api.nvim_set_keymap('n', 'k', "v:count == 0 ? 'gk' : 'k'", { noremap = true,
 vim.api.nvim_set_keymap('n', 'j', "v:count == 0 ? 'gj' : 'j'", { noremap = true, expr = true, silent = true })
 
 -- Nvim-Dap-UI Mappings
- nnoremap("<leader>dd", "<cmd>lua require("dapui").toggle()<CR>", "silent", "DAP-UI: Toggle Debugger")
- nnoremap("<leader>do", "<cmd>lua require("dapui").open()<CR>", "silent", "DAP-UI: Open Debugger")
- nnoremap("<leader>dc", "<cmd>lua require("dapui").close()<CR>", "silent", "DAP-UI: Close Debugger")
+nnoremap("<leader>dd", "<cmd>lua require('dapui').toggle()<CR>", "silent", "DAP-UI: Toggle Debugger")
+nnoremap("<leader>do", "<cmd>lua require('dapui').open()<CR>", "silent", "DAP-UI: Open Debugger")
+nnoremap("<leader>dc", "<cmd>lua require('dapui').close()<CR>", "silent", "DAP-UI: Close Debugger")
