--- a/templates/nvim/lua/user_treesitter.lua.j2
+++ b/templates/nvim/lua/user_treesitter.lua.j2
@@ -27,14 +27,15 @@ parser_configs.norg_table = {
 
 require('nvim-treesitter.configs').setup {
   ensure_installed = { 
+    "bash",
+    "just",
+    "lua",
+    "markdown",
+    "nix",
     "norg",
     "norg_meta",
     "norg_table",
-    "just",
-    "markdown",
-    "nix",
-    "lua",
-    "bash",
+    "yaml",
     {{ treesitter_parsers_file or "-- No Extra Treesitter Parsers Installed" }}
   },
   highlight = {
