--- a/templates/nvim/lua/user_treesitter.lua.j2
+++ b/templates/nvim/lua/user_treesitter.lua.j2
@@ -28,8 +28,10 @@ parser_configs.norg_table = {
 require('nvim-treesitter.configs').setup {
   ensure_installed = { 
     "bash",
+    "json",
     "just",
     "lua",
+    "make",
     "markdown",
     "nix",
     "norg",
