[Neovim] Fix hydra windows/split config.

--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -22,15 +22,15 @@ nnoremap("<C-h>", "<cmd>lua require('smart-splits').move_cursor_left()<CR>", "si
 nnoremap("<C-j>", "<cmd>lua require('smart-splits').move_cursor_down()<CR>", "silent", "Split/Window: Move Down")
 nnoremap("<C-k>", "<cmd>lua require('smart-splits').move_cursor_up()<CR>", "silent", "Split/Window: Move Up")
 nnoremap("<C-l>", "<cmd>lua require('smart-splits').move_cursor_right()<CR>", "silent", "Split/Window: Move Right")
-nnoremap("<C-w>h", "<cmd>lua require('smart-splits').resize_left()<CR>", "silent", "Split/Window: Resize Left")
-nnoremap("<C-w>j", "<cmd>lua require('smart-splits').resize_down()<CR>", "silent", "Split/Window: Resize Down")
-nnoremap("<C-w>k", "<cmd>lua require('smart-splits').resize_up()<CR>", "silent", "Split/Window: Resize Up")
-nnoremap("<C-w>l", "<cmd>lua require('smart-splits').resize_right()<CR>", "silent", "Split/Window: Resize Right")
-nnoremap("<leader>ww", "<Cmd>WinShift<CR>", "silent", "WinShift: Enter WinShift Mode")
-nnoremap("<leader>wh", "<Cmd>WinShift left<CR>", "silent", "WinShift: Shift Split/Window Left")
-nnoremap("<leader>wj", "<Cmd>WinShift down<CR>", "silent", "WinShift: Shift Split/Window Down")
-nnoremap("<leader>wk", "<Cmd>WinShift up<CR>", "silent", "WinShift: Shift Split/Window Up")
-nnoremap("<leader>wl", "<Cmd>WinShift right<CR>", "silent", "WinShift: Shift Split/Window Right")
+-- nnoremap("<C-w>h", "<cmd>lua require('smart-splits').resize_left()<CR>", "silent", "Split/Window: Resize Left")
+-- nnoremap("<C-w>j", "<cmd>lua require('smart-splits').resize_down()<CR>", "silent", "Split/Window: Resize Down")
+-- nnoremap("<C-w>k", "<cmd>lua require('smart-splits').resize_up()<CR>", "silent", "Split/Window: Resize Up")
+-- nnoremap("<C-w>l", "<cmd>lua require('smart-splits').resize_right()<CR>", "silent", "Split/Window: Resize Right")
+-- nnoremap("<leader>ww", "<Cmd>WinShift<CR>", "silent", "WinShift: Enter WinShift Mode")
+-- nnoremap("<leader>wh", "<Cmd>WinShift left<CR>", "silent", "WinShift: Shift Split/Window Left")
+-- nnoremap("<leader>wj", "<Cmd>WinShift down<CR>", "silent", "WinShift: Shift Split/Window Down")
+-- nnoremap("<leader>wk", "<Cmd>WinShift up<CR>", "silent", "WinShift: Shift Split/Window Up")
+-- nnoremap("<leader>wl", "<Cmd>WinShift right<CR>", "silent", "WinShift: Shift Split/Window Right")
 
 -- Terminal Mappings
 vim.api.nvim_set_keymap('t', '<C-]>', '<C-\\><C-n> ', { noremap = true, silent = true })
