[Neovim] Fix for hydra/which-key conflict, needs to be set per hydra.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -30,6 +30,9 @@ vim.o.hlsearch = true
 vim.o.breakindent = true
 vim.o.autoindent = true
 
+-- Timeout Length
+vim.o.timeoutlen = 100
+
 -- Set Scrollbar
 require("scrollbar").setup()
 require("scrollbar.handlers.search").setup()
