--- a/templates/nvim/lua/user_window.lua.j2
+++ b/templates/nvim/lua/user_window.lua.j2
@@ -17,7 +17,8 @@ Hydra({
       hint = {
          border = 'rounded',
          position = 'top'
-      }
+      },
+      invoke_on_body = true,
    },
    mode = 'n',
    body = '<C-w>',
