[Neovim] Switch hydra windows/split position to middle of screen.

--- a/templates/nvim/lua/user_window.lua.j2
+++ b/templates/nvim/lua/user_window.lua.j2
@@ -16,7 +16,7 @@ Hydra({
       timeout = 4000,
       hint = {
          border = 'rounded',
-         position = 'top'
+         position = 'middle'
       },
       invoke_on_body = true,
    },
