[Neovim] Force override leap keymaps over other plugins.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -161,7 +161,7 @@ require('user_languages')
 require("marks").setup{}
 
 -- Leap Plugin Settings
-require('leap').set_default_keymaps()
+require('leap').set_default_keymaps(true)
 
 -- Last Minute Config
 
