--- a/templates/nvim/lua/plugins.lua.j2
+++ b/templates/nvim/lua/plugins.lua.j2
@@ -86,7 +86,7 @@ return require('packer').startup(function(use)
   use 'simrat39/symbols-outline.nvim'
   -- Cursorline Plugin
   --use 'yamatsum/nvim-cursorline'
-  -- Motion Plugins
+  -- Motion/Movement Plugins
   use 'ggandor/leap.nvim'
   use 'tpope/vim-surround'
   use 'tpope/vim-repeat'
