[Neovim] Fix fm-nvim floaterm collision.

--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -56,7 +56,7 @@ nnoremap("<C-]>", ":noh<CR>", "silent", "HLSLens: Clear Search Result")
 -- Terminal Plugin Mappings
 m.nname("<leader>s", "Floaterm")
 tnoremap("<C-/>", "<Cmd>ToggleTerm<CR>", "silent", "ToggleTerm: Toggle Terminal")
-nnoremap("<C-s>", "<Cmd>FloatermNew<CR>", "silent", "Floaterm: New Terminal")
+-- nnoremap("<C-s>", "<Cmd>FloatermNew<CR>", "silent", "Floaterm: New Terminal")
 tnoremap("<C-b>", "<Cmd>FloatermPrev<CR>", "silent", "Floaterm: Previous Terminal")
 tnoremap("<C-f>", "<Cmd>FloatermNext<CR>", "silent", "Floaterm: Next Terminal")
 nnoremap("<leader>ss", "<Cmd>Floaterms<CR>", "silent", "Floaterm: Select Terminal")
