[Neovim] Add extra treesitter config.

--- a/templates/nvim/lua/user_treesitter.lua.j2
+++ b/templates/nvim/lua/user_treesitter.lua.j2
@@ -96,4 +96,5 @@ require('nvim-treesitter.configs').setup {
       },
     },
   },
+  {{ treesitter_extra_config_file or "-- No Extra Treesitter Config" }}
 }
