[Neovim] Add annotation/refactoring plugins.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -157,6 +157,9 @@ require('user_keymaps')
 -- User Language Plugin Settings
 require('user_languages')
 
+-- User Refactoring Plugin Settings
+require('user_refactoring')
+
 -- Marks Plugin
 require("marks").setup{}
 
