--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -156,3 +156,34 @@ vim.api.nvim_set_keymap('n', 'j', "v:count == 0 ? 'gj' : 'j'", { noremap = true,
 nnoremap("<leader>dd", "<cmd>lua require('dapui').toggle()<CR>", "silent", "DAP-UI: Toggle Debugger")
 nnoremap("<leader>do", "<cmd>lua require('dapui').open()<CR>", "silent", "DAP-UI: Open Debugger")
 nnoremap("<leader>dc", "<cmd>lua require('dapui').close()<CR>", "silent", "DAP-UI: Close Debugger")
+
+-- Refactoring.nvim Mappings
+-- Remaps for the refactoring operations currently offered by the plugin
+vnoremap("<leader>re", [[ <Esc><Cmd>lua require('refactoring').refactor('Extract Function')<CR>]], {noremap = true, silent = true, expr = false})
+vnoremap("<leader>rf", [[ <Esc><Cmd>lua require('refactoring').refactor('Extract Function To File')<CR>]], {noremap = true, silent = true, expr = false})
+vnoremap("<leader>rv", [[ <Esc><Cmd>lua require('refactoring').refactor('Extract Variable')<CR>]], {noremap = true, silent = true, expr = false})
+vnoremap("<leader>ri", [[ <Esc><Cmd>lua require('refactoring').refactor('Inline Variable')<CR>]], {noremap = true, silent = true, expr = false})
+-- prompt for a refactor to apply when the remap is triggered
+vnoremap(
+    "<leader>rr",
+    ":lua require('refactoring').select_refactor()<CR>",
+    { noremap = true, silent = true, expr = false }
+)
+-- Extract block doesn't need visual mode
+nnoremap("<leader>rb", [[ <Cmd>lua require('refactoring').refactor('Extract Block')<CR>]], {noremap = true, silent = true, expr = false})
+nnoremap("<leader>rbf", [[ <Cmd>lua require('refactoring').refactor('Extract Block To File')<CR>]], {noremap = true, silent = true, expr = false})
+-- Inline variable can also pick up the identifier currently under the cursor without visual mode
+nnoremap("<leader>ri", [[ <Cmd>lua require('refactoring').refactor('Inline Variable')<CR>]], {noremap = true, silent = true, expr = false})
+-- You can also use below = true here to to change the position of the printf
+-- statement (or set two remaps for either one). This remap must be made in normal mode.
+nnoremap(
+	"<leader>rp",
+	":lua require('refactoring').debug.printf({below = false})<CR>",
+	{ noremap = true }
+)
+-- Remap in normal mode and passing { normal = true } will automatically find the variable under the cursor and print it
+nnoremap("<leader>rv", ":lua require('refactoring').debug.print_var({ normal = true })<CR>", { noremap = true })
+-- Remap in visual mode will print whatever is in the visual selection
+vnoremap("<leader>rv", ":lua require('refactoring').debug.print_var({})<CR>", { noremap = true })
+-- Cleanup function: this remap should be made in normal mode
+nnoremap("<leader>rc", ":lua require('refactoring').debug.cleanup({})<CR>", { noremap = true })
