--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -166,6 +166,12 @@ require("marks").setup{}
 -- Leap Plugin Settings
 require('leap').set_default_keymaps(true)
 
+{% if {{ nvim_test_enable }} %}
+require('user_test')
+{% else %}
+-- No Testing Plugins Enabled
+{% endif %}
+
 -- Last Minute Config
 
 -- Extra Config
