[Neovim] Add sidebar plugin.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -160,6 +160,9 @@ require('user_languages')
 -- User Refactoring Plugin Settings
 require('user_refactoring')
 
+-- User Sidebar Plugin Settings
+require('user_sidebar')
+
 -- Marks Plugin
 require("marks").setup{}
 
