--- a/templates/nvim/lua/plugins.lua.j2
+++ b/templates/nvim/lua/plugins.lua.j2
@@ -26,6 +26,8 @@ return require('packer').startup(function(use)
   }
   use { 'TC72/telescope-tele-tabby.nvim', requires = 'nvim-telescope/telescope.nvim' }
   use "b0o/incline.nvim"
+  -- Side Line/Bar
+  use 'sidebar-nvim/sidebar.nvim'
   -- Theme
   use 'sainnhe/gruvbox-material'
   -- Indent Plugins
