--- a/templates/nvim/lua/user_completion.lua.j2
+++ b/templates/nvim/lua/user_completion.lua.j2
@@ -54,4 +54,5 @@ cmp.setup({
     { name = 'nvim_lsp' },
     { name = 'luasnip' },
   },
+  {{ nvim_completion_config_file or "-- No Extra Completion Config" }}
 })
