--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -187,3 +187,6 @@ nnoremap("<leader>rv", ":lua require('refactoring').debug.print_var({ normal = t
 vnoremap("<leader>rv", ":lua require('refactoring').debug.print_var({})<CR>", { noremap = true })
 -- Cleanup function: this remap should be made in normal mode
 nnoremap("<leader>rc", ":lua require('refactoring').debug.cleanup({})<CR>", { noremap = true })
+
+-- Language-Specific Mappings
+{{ extra_nvim_language_mappings_file or "-- No Language Specific Mappings Configured" }}
