--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -61,7 +61,8 @@ tnoremap("<C-b>", "<Cmd>FloatermPrev<CR>", "silent", "Floaterm: Previous Termina
 tnoremap("<C-f>", "<Cmd>FloatermNext<CR>", "silent", "Floaterm: Next Terminal")
 nnoremap("<leader>ss", "<Cmd>Floaterms<CR>", "silent", "Floaterm: Select Terminal")
 nnoremap("<leader>sb", "<Cmd>Broot<CR>", "silent", "Floating Window: Broot")
-nnoremap("<leader>sr", "<Cmd>lua require('fm-nvim').Ranger(vim.fn.expand('%:p:~:.:h'))<CR>", "silent", "Floating Window: Ranger")
+nnoremap("<leader>sr", "<Cmd>lua require('fm-nvim').Ranger(vim.fn.expand('%:p:~:.:h'))<CR>", "silent", "Floating Window: Ranger(Local)")
+nnoremap("<leader>sR", "<Cmd>Ranger<CR>", "silent", "Floating Window: Ranger(Project Root)")
 nnoremap("<leader>s/", "<Cmd>2ToggleTerm<CR>", "silent", "ToggleTerm: Double Terminal")
 nnoremap("<leader>st", "<Cmd>3ToggleTerm<CR>", "silent", "ToggleTerm: Triple Terminal")
 nnoremap("<leader>sx", "<Cmd>ToggleTerm size=20 direction=horizontal<CR>", "silent", "ToggleTerm: Horizontal Terminal")
