[Neovim] Add DAP keymaps.

--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -154,9 +154,20 @@ vim.api.nvim_set_keymap('n', 'k', "v:count == 0 ? 'gk' : 'k'", { noremap = true,
 vim.api.nvim_set_keymap('n', 'j', "v:count == 0 ? 'gj' : 'j'", { noremap = true, expr = true, silent = true })
 
 -- Nvim-Dap-UI Mappings
+m.nname("<leader>d", "DAP(Debug Adapter Protocol)")
+nnoremap("<leader>db", "<cmd>lua require'dap'.toggle_breakpoint()<CR>", "silent", "DAP: Toggle Breakpoint")
+nnoremap("<leader>dc", "<cmd>lua require'dap'.continue()<CR>", "silent", "DAP: Continue")
+nnoremap("<leader>dv", "<cmd>lua require'dap'.step_over()<CR>", "silent", "DAP: Step Over")
+nnoremap("<leader>di", "<cmd>lua require'dap'.step_into()<CR>", "silent", "DAP: Step Into")
+nnoremap("<leader>do", "<cmd>lua require'dap'.step_out()<CR>", "silent", "DAP: Step Out")
+nnoremap("<leader>dr", "<cmd>lua require'dap'.repl.open()<CR>", "silent", "DAP: Open REPL")
 nnoremap("<leader>dd", "<cmd>lua require('dapui').toggle()<CR>", "silent", "DAP-UI: Toggle Debugger")
-nnoremap("<leader>do", "<cmd>lua require('dapui').open()<CR>", "silent", "DAP-UI: Open Debugger")
-nnoremap("<leader>dc", "<cmd>lua require('dapui').close()<CR>", "silent", "DAP-UI: Close Debugger")
+-- nnoremap("<leader>do", "<cmd>lua require('dapui').open()<CR>", "silent", "DAP-UI: Open Debugger")
+-- nnoremap("<leader>dx", "<cmd>lua require('dapui').close()<CR>", "silent", "DAP-UI: Close Debugger")
+nnoremap("<F5>", "<cmd>lua require'dap'.continue()<CR>", "silent", "DAP: Continue")
+nnoremap("<F10>", "<cmd>lua require'dap'.step_over()<CR>", "silent", "DAP: Step Over")
+nnoremap("<F11>", "<cmd>lua require'dap'.step_into()<CR>", "silent", "DAP: Step Into")
+nnoremap("<F12>", "<cmd>lua require'dap'.step_out()<CR>", "silent", "DAP: Step Out")
 
 -- Refactoring.nvim Mappings
 -- Remaps for the refactoring operations currently offered by the plugin
