--- a/templates/nvim/lua/user_telescope.lua.j2
+++ b/templates/nvim/lua/user_telescope.lua.j2
@@ -13,6 +13,9 @@ require('telescope').setup {
 -- Enable telescope fzf native
 require('telescope').load_extension 'fzf'
 
+-- Enable DAP Integration
+require('telescope').load_extension('dap')
+
 -- Easypick Config
 local easypick = require("easypick")
 -- only required for the example to work
