--- a/templates/nvim/lua/plugins.lua.j2
+++ b/templates/nvim/lua/plugins.lua.j2
@@ -191,6 +191,13 @@ return require('packer').startup(function(use)
   -- Language Server Protocol Providers(End)
   -- Debug Adapter Protocol
   use { "rcarriga/nvim-dap-ui", requires = { "mfussenegger/nvim-dap" } }
+  use {
+    "nvim-telescope/telescope-dap.nvim",
+    requires = {
+        {"mfussenegger/nvim-dap"},
+        {"nvim-telescope/telescope.nvim"}
+    }
+  }
   -- Debug Adapter Protocol(End)
   -- Language Plugins
   {{ language_neovim_plugins_file or "-- No Language Plugins Installed" }}
