--- a/templates/nvim/lua/plugins.lua.j2
+++ b/templates/nvim/lua/plugins.lua.j2
@@ -15,6 +15,7 @@ return require('packer').startup(function(use)
   use { 'nvim-telescope/telescope.nvim', requires = { 'nvim-lua/plenary.nvim' } }
   use { 'nvim-telescope/telescope-fzf-native.nvim', run = 'make' }
   use {'axkirillov/easypick.nvim', requires = 'nvim-telescope/telescope.nvim'}
+  use {'nvim-telescope/telescope-ui-select.nvim', requires = 'nvim-telescope/telescope.nvim'}
   -- Status/Tab Line
   use {
     'nvim-lualine/lualine.nvim',
@@ -140,6 +141,7 @@ return require('packer').startup(function(use)
   }
   use 'akinsho/toggleterm.nvim'
   use 'numToStr/FTerm.nvim'
+  use 'stevearc/overseer.nvim'
   -- Tree Viewer
   use {
     'kyazdani42/nvim-tree.lua',
