--- a/templates/nvim/lua/user_telescope.lua.j2
+++ b/templates/nvim/lua/user_telescope.lua.j2
@@ -1,4 +1,4 @@
-require('telescope').setup {
+require("telescope").setup({
   defaults = {
     theme = "dropdown",
     mappings = {
@@ -8,13 +8,35 @@ require('telescope').setup {
       },
     },
   },
-}
+  extensions = {
+    ["ui-select"] = {
+      require("telescope.themes").get_dropdown {
+        -- even more opts
+      }
+
+      -- pseudo code / specification for writing custom displays, like the one
+      -- for "codeactions"
+      -- specific_opts = {
+      --   [kind] = {
+      --     make_indexed = function(items) -> indexed_items, width,
+      --     make_displayer = function(widths) -> displayer
+      --     make_display = function(displayer) -> function(e)
+      --     make_ordinal = function(e) -> string
+      --   },
+      --   -- for example to disable the custom builtin "codeactions" display
+      --      do the following
+      --   codeactions = false,
+      -- }
+    }
+  }
+})
+require("telescope").load_extension("ui-select")
 
 -- Enable telescope fzf native
-require('telescope').load_extension 'fzf'
+require("telescope").load_extension("fzf")
 
 -- Enable DAP Integration
-require('telescope').load_extension('dap')
+require("telescope").load_extension("dap")
 
 -- Easypick Config
 local easypick = require("easypick")
