--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -134,7 +134,7 @@ vim.g.asynctasks_term_reuse = 1
 require('user_fm')
 
 -- Terminal Settings
-require('user_toggleterm')
+require('user_terminal')
 
 -- Neorg Settings
 require('user_neorg')
