--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -54,12 +54,12 @@ nnoremap("g#", "g#<Cmd>lua require('hlslens').start()<CR>", "HLSLens: Search Nea
 nnoremap("<C-]>", ":noh<CR>", "silent", "HLSLens: Clear Search Result")
 
 -- Terminal Plugin Mappings
-m.nname("<leader>s", "Floaterm")
+m.nname("<leader>s", "Term")
 tnoremap("<C-/>", "<Cmd>ToggleTerm<CR>", "silent", "ToggleTerm: Toggle Terminal")
--- nnoremap("<C-s>", "<Cmd>FloatermNew<CR>", "silent", "Floaterm: New Terminal")
-tnoremap("<C-b>", "<Cmd>FloatermPrev<CR>", "silent", "Floaterm: Previous Terminal")
-tnoremap("<C-f>", "<Cmd>FloatermNext<CR>", "silent", "Floaterm: Next Terminal")
-nnoremap("<leader>ss", "<Cmd>Floaterms<CR>", "silent", "Floaterm: Select Terminal")
+-- nnoremap("<C-s>", "<Cmd>FloatermNew<CR>", "silent", "Term: New Floaterm")
+tnoremap("<C-b>", "<Cmd>FloatermPrev<CR>", "silent", "Term: Previous Floaterm")
+tnoremap("<C-f>", "<Cmd>FloatermNext<CR>", "silent", "Term: Next Floaterm")
+nnoremap("<leader>ss", "<Cmd>Floaterms<CR>", "silent", "Term: Select Floaterm")
 nnoremap("<leader>sb", "<Cmd>Broot<CR>", "silent", "Floating Window: Broot")
 nnoremap("<leader>sr", "<Cmd>lua require('fm-nvim').Ranger(vim.fn.expand('%:p:~:.:h'))<CR>", "silent", "Floating Window: Ranger(Local)")
 nnoremap("<leader>sR", "<Cmd>Ranger<CR>", "silent", "Floating Window: Ranger(Project Root)")
@@ -70,12 +70,12 @@ nnoremap("<leader>sv", "<Cmd>ToggleTerm size=80 direction=vertical<CR>", "silent
 
 -- Base Telescope Mappings
 -- nnoremap(":", "<cmd>lua require('telescope.builtin').commands()<CR>", "silent", "Telescope: View Commands")
-nnoremap("<leader>ff", "<cmd>lua require('telescope.builtin').find_files({previewer = false})<CR>", "silent", "Telescope: Find Files")
+nnoremap("<leader>ff", "<cmd>lua require('telescope.builtin').find_files({previewer = true})<CR>", "silent", "Telescope: Find Files")
 nnoremap("<leader>fb", "<cmd>lua require('telescope.builtin').buffers()<CR>", "silent", "Telescope: View Buffers")
 nnoremap("<leader>fh", "<cmd>lua require('telescope.builtin').help_tags()<CR>", "silent", "Telescope: Help Tags")
 nnoremap("<leader>ft", "<cmd>Telescope tele_tabby list<CR>", "silent", "Telescope: Search Tabs")
 nnoremap("_", "<cmd>lua require('telescope.builtin').grep_string()<CR>", "silent", "Telescope: Grep String(Cursor Word)")
-nnoremap("<leader>bt", "<cmd>lua require('telescope.builtin').tags{ only_current_buffer = true }<CR>", "silent", "Telescope: Search Buffer Tags")
+-- nnoremap("<leader>bt", "<cmd>lua require('telescope.builtin').tags{ only_current_buffer = true }<CR>", "silent", "Telescope: Search Buffer Tags")
 nnoremap("<leader>Q", "<cmd>lua require('telescope.builtin').live_grep()<CR>", "silent", "Telescope: Live Grep Project")
 nnoremap("<leader>q", "<cmd>lua require('telescope-custom').live_grep_in_folder()<CR>", "silent", "Telescope: Selective Live Grep Project")
 nnoremap("<leader>/", "<cmd>lua require('telescope.builtin').current_buffer_fuzzy_find()<CR>", "silent", "Telescope: Find in Current Buffer")
