[Neovim] Add tele_tabby config.

--- a/templates/nvim/lua/user_telescope.lua.j2
+++ b/templates/nvim/lua/user_telescope.lua.j2
@@ -27,7 +27,10 @@ require("telescope").setup({
       --      do the following
       --   codeactions = false,
       -- }
-    }
+    },
+    tele_tabby = {
+      use_highlighter = true,
+    },
   }
 })
 require("telescope").load_extension("ui-select")
