--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -92,10 +92,10 @@ nnoremap("<leader>gd", "<Cmd>DiffviewOpen<CR>", "silent", "Git: Show Diff")
 nnoremap("<leader>gh", "<Cmd>DiffviewFileHistory .<CR>", "silent", "Git: Show Changed File History")
 
 -- Extra Telescope Mappings
-m.nname("<leader>t", "Telescope")
-nnoremap("<leader>td", "<cmd>Telescope dap commands<CR>", "silent", "Telescope: DAP Commands")
-nnoremap("<leader>tb", "<cmd>Telescope dap commands<CR>", "silent", "Telescope: DAP Breakpoints")
-nnoremap("<leader>tt", "<cmd>lua require('telescope').extensions.asynctasks.all()<CR>", "silent", "Telescope: Run Task")
+-- m.nname("<leader>t", "Telescope")
+-- nnoremap("<leader>td", "<cmd>Telescope dap commands<CR>", "silent", "Telescope: DAP Commands")
+-- nnoremap("<leader>tb", "<cmd>Telescope dap commands<CR>", "silent", "Telescope: DAP Breakpoints")
+nnoremap("<leader>t", "<cmd>lua require('telescope').extensions.asynctasks.all()<CR>", "silent", "Telescope: Run Task")
 m.nname("<leader>n", "Telescope Neorg")
 nnoremap("<leader>nf", "<cmd>Telescope neorg find_linkable<CR>", "silent", { ft = "norg" }, "Telescope Neorg: Find Neorg Links")
 nnoremap("<leader>n/", "<cmd>Telescope neorg search_headings<CR>", "silent", { ft = "norg" }, "Telescope Neorg: Search Neorg File Headings")
@@ -174,6 +174,7 @@ nnoremap("<F11>", "<cmd>lua require'dap'.step_into()<CR>", "silent", "DAP: Step 
 nnoremap("<F12>", "<cmd>lua require'dap'.step_out()<CR>", "silent", "DAP: Step Out")
 
 -- Refactoring.nvim Mappings
+m.nname("<leader>r", "Refactoring")
 -- Remaps for the refactoring operations currently offered by the plugin
 vnoremap("<leader>re", [[ <Esc><Cmd>lua require('refactoring').refactor('Extract Function')<CR>]], {noremap = true, silent = true, expr = false})
 vnoremap("<leader>rf", [[ <Esc><Cmd>lua require('refactoring').refactor('Extract Function To File')<CR>]], {noremap = true, silent = true, expr = false})
@@ -203,6 +204,12 @@ nnoremap("<leader>rv", ":lua require('refactoring').debug.print_var({ normal = t
 vnoremap("<leader>rv", ":lua require('refactoring').debug.print_var({})<CR>", { noremap = true })
 -- Cleanup function: this remap should be made in normal mode
 nnoremap("<leader>rc", ":lua require('refactoring').debug.cleanup({})<CR>", { noremap = true })
+
+-- Overseer Plugin Mappings
+m.nname("<leader>o", "Overseer")
+nnoremap("<leader>oo", ":OverseerToggle<CR>", "Overseer: Toggle")
+nnoremap("<leader>or", ":OverseerRun<CR>", "Overseer: Run")
+nnoremap("<leader>ot", ":OverseerTaskAction<CR>", "Overseer: Task Action")
 
 -- Language-Specific Mappings
 {{ extra_nvim_language_mappings_file or "-- No Language Specific Mappings Configured" }}
