[Neovim] Give hydra it's own config.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -155,6 +155,9 @@ require('user_sidebar')
 -- Marks Plugin
 require("marks").setup{}
 
+-- Hydra
+require('user_hydra')
+
 -- WinShift
 require('user_window')
 
