--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -206,10 +206,10 @@ vnoremap("<leader>rv", ":lua require('refactoring').debug.print_var({})<CR>", { 
 nnoremap("<leader>rc", ":lua require('refactoring').debug.cleanup({})<CR>", { noremap = true })
 
 -- Overseer Plugin Mappings
-m.nname("<leader>o", "Overseer")
-nnoremap("<leader>oo", ":OverseerToggle<CR>", "Overseer: Toggle")
-nnoremap("<leader>or", ":OverseerRun<CR>", "Overseer: Run")
-nnoremap("<leader>ot", ":OverseerTaskAction<CR>", "Overseer: Task Action")
+-- m.nname("<leader>o", "Overseer")
+-- nnoremap("<leader>oo", ":OverseerToggle<CR>", "Overseer: Toggle")
+-- nnoremap("<leader>or", ":OverseerRun<CR>", "Overseer: Run")
+-- nnoremap("<leader>ot", ":OverseerTaskAction<CR>", "Overseer: Task Action")
 
 -- Language-Specific Mappings
 {{ extra_nvim_language_mappings_file or "-- No Language Specific Mappings Configured" }}
