--- a/templates/nvim/lua/user_hydra.lua.j2
+++ b/templates/nvim/lua/user_hydra.lua.j2
@@ -93,3 +93,71 @@ Hydra({
       { '<Esc>', nil, { exit = true } }
    }
 })
+
+local splits = require('smart-splits')
+local cmd = require('hydra.keymap-util').cmd
+local pcmd = require('hydra.keymap-util').pcmd
+local window_hint = [[
+ ^^^^^^^^^^^^     Move      ^^    Size   ^^   ^^     Split
+ ^^^^^^^^^^^^-------------  ^^-----------^^   ^^---------------
+ ^ ^ _k_ ^ ^  ^ ^ _K_ ^ ^   ^   _<C-k>_   ^   _s_: horizontally 
+ _h_ ^ ^ _l_  _H_ ^ ^ _L_   _<C-h>_ _<C-l>_   _v_: vertically
+ ^ ^ _j_ ^ ^  ^ ^ _J_ ^ ^   ^   _<C-j>_   ^   _q_, _c_: close
+ focus^^^^^^  window^^^^^^  ^_=_: equalize^   _z_: maximize
+ ^ ^ ^ ^ ^ ^  ^ ^ ^ ^ ^ ^   ^^ ^          ^   _o_: remain only
+ _b_: choose buffer
+]]
+
+Hydra({
+   name = 'Windows',
+   hint = window_hint,
+   config = {
+      invoke_on_body = true,
+      hint = {
+         border = 'rounded',
+         offset = -1
+      }
+   },
+   mode = {'n', 't', 'x'},
+   body = '<C-w>',
+   heads = {
+      { 'h', function() splits.move_cursor_left() end },
+      { 'j', function() splits.move_cursor_down() end },
+      { 'k', function() splits.move_cursor_up() end },
+      { 'l', function() splits.move_cursor_right() end },
+
+      { 'H', cmd 'WinShift left' },
+      { 'J', cmd 'WinShift down' },
+      { 'K', cmd 'WinShift up' },
+      { 'L', cmd 'WinShift right' },
+
+      { '<C-h>', function() splits.resize_left(2)  end },
+      { '<C-j>', function() splits.resize_down(2)  end },
+      { '<C-k>', function() splits.resize_up(2)    end },
+      { '<C-l>', function() splits.resize_right(2) end },
+      { '=', '<C-w>=', { desc = 'equalize'} },
+
+      { 's',     pcmd('split', 'E36') },
+      { '<C-s>', pcmd('split', 'E36'), { desc = false } },
+      { 'v',     pcmd('vsplit', 'E36') },
+      { '<C-v>', pcmd('vsplit', 'E36'), { desc = false } },
+
+      { 'w',     '<C-w>w', { exit = true, desc = false } },
+      { '<C-w>', '<C-w>w', { exit = true, desc = false } },
+
+      { 'z',     cmd 'MaximizerToggle!', { desc = 'maximize' } },
+      { '<C-z>', cmd 'MaximizerToggle!', { exit = true, desc = false } },
+
+      { 'o',     '<C-w>o', { exit = true, desc = 'remain only' } },
+      { '<C-o>', '<C-w>o', { exit = true, desc = false } },
+
+      -- { 'b', choose_buffer, { exit = true, desc = 'choose buffer' } },
+
+      { 'c',     pcmd('close', 'E444') },
+      { 'q',     pcmd('close', 'E444'), { desc = 'close window' } },
+      { '<C-c>', pcmd('close', 'E444'), { desc = false } },
+      { '<C-q>', pcmd('close', 'E444'), { desc = false } },
+
+      { '<Esc>', nil,  { exit = true, desc = false }}
+   }
+})
