--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -5,6 +5,7 @@ vim.g.maplocalleader = ' '
 
 -- Which-Key Config
 require("which-key").setup({
+  triggers = {"<leader>"},
   triggers_blacklist = {
     n = { "<C-w>", "<C-g>" },
     v = { "<C-w>", "<C-g>" },
